# smartvintaawesomekit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  railway.toml
src/smartvintaawesomekit/: __init__.py  api.py  app.py  cli.py  config.py  database.py
test-project/: pyproject.toml
test-project/app/: database.py  main.py
test-project/tests/: test_main.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_database.py
